# menard

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/skills/: audit.md
.docsync/: donttouch  donttouch.example  links.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/branding/: BRANDING.md
.github/workflows/: ci.yml  docs.yml
.menard/: .gitignore  donttouch  links.toml
docs/: architecture.md  configuration.md  contributing.md  getting-started.md  index.md  skills.md  tutorial.md
docs/assets/menard-logo/: info.txt
docs/cli/: reference.md
docs/concepts/: donttouch.md  links.md  staleness.md
docs/skills/: audit.md
docs/stylesheets/: extra.css
site/: 404.html  index.html  objects.inv  sitemap.xml
site/architecture/: index.html
site/cli/reference/: index.html
site/concepts/donttouch/: index.html
site/concepts/links/: index.html
site/concepts/staleness/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/skills/audit/: index.html
site/tutorial/: index.html
src/docsync/: __init__.py  cache.py  cli.py  config.py  coverage.py  donttouch.py  graph.py  hook.py  imports.py  reviewed.py  sections.py  staleness.py  symbols.py  toml_links.py
src/menard/: __init__.py  _compat.py  cache.py  cli.py  config.py  coverage.py  donttouch.py  graph.py  hook.py  imports.py  reviewed.py  sections.py  staleness.py  symbols.py  toml_links.py
src/menard/skills/: audit.md
tests/: test_auto_generated.py  test_brevity.py  test_cache.py  test_cli_commands.py  test_cli_commands_extended.py  test_cli_direct.py  test_cli_fix.py  test_cli_integration.py  test_cli_simple.py  test_complete_coverage.py  test_config.py  test_detect_source.py  test_donttouch.py  test_graph.py  test_hook_simple.py  test_imports.py  test_integration_toml.py  test_integration_workflows.py  test_reviewed.py  test_sections.py  test_skills.py  test_staleness.py  test_staleness_enriched.py  test_symbols.py  test_toml_links.py
