[project]
name = "docsync"
version = "0.2.0"
description = "Keep code and documentation in sync with centralized linking and section-aware staleness detection"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "pathspec>=1.0.4",
]

[project.scripts]
docsync = "docsync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = []

[tool.coverage.report]
# Exclude defensive code and error messages from coverage requirements
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    # Exclude print statements in CLI (user-facing messages)
    '^\s*print\(',
    # Exclude simple error returns
    '^\s*return 1\s*$',
]
skip_covered = false
skip_empty = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["docsync"]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]


[tool.docsync]
mode = "block"
transitive_depth = 1
enforce_symmetry = true
require_links = []
exempt = []
doc_paths = ["docs/**/*.md", "README.md"]
