[project]
name = "menard"
version = "0.3.0"
description = "Keep code and documentation in sync with centralized linking and section-aware staleness detection"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "pathspec>=1.0.4",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
menard = "menard.cli:main"

[project.optional-dependencies]
brevity = ["fastembed>=0.7", "numpy>=1.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/menard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = []

[tool.coverage.report]
# Exclude defensive code and error messages from coverage requirements
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    # Exclude print statements in CLI (user-facing messages)
    '^\s*print\(',
    # Exclude simple error returns
    '^\s*return 1\s*$',
]
skip_covered = false
skip_empty = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["menard"]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "fastembed>=0.7.4",
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.9.0",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "numpy>=1.24",  # For testing duplicates module
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff==0.15.8",
    "tomli>=2.0",  # For type checking on Python 3.11+
    "ty==0.0.27",
]


[tool.ty.environment]
# Set the target Python version
python-version = "3.10"

# Configure the Python environment for module discovery
python = ".venv"

# Set module search paths
root = ["./src"]

[tool.ty.src]
# Include specific directories for type checking
include = ["src", "tests"]

# Exclude directories from checking
exclude = []

[tool.menard]
mode = "block"
transitive_depth = 1
enforce_symmetry = true
require_links = ["src/menard/**/*.py"]
exempt = ["src/menard/_compat.py", "src/menard/__init__.py"]
doc_paths = ["docs/**/*.md", "README.md", "mkdocs.yml", "CLAUDE.md"]
exclude_docs = ["CLAUDE.md"]  # Project instructions, not living docs

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = true
